--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samim's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width"> 
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Samim Sarkar's</span> World!</h1>
+            <h3>A Professional Web Developer | Teacher | Student Mentor</h3>
+            <p>This is Md. Samim Sarkar here. I am studying BSc in Computer Science and Engineering at Green University of Bangladesh. I have completed Diploma in Computer Technology from Cumilla Polytechnic Institute. Curently, I live at Mirpur Dhaka.
+
+            </p>
+            <a class="link-button" href="https://github.com/samimsarkar" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/samim's-picture.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
