--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
             <img src="images/samim's-picture.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/samim's-picture-02.png" alt="">
+        </div>
+        <div class="half-width"> 
+            <h1>Dream Big</h1>
+            <h2>Became a Web Developer</h2>
+            <p>This is Md. Samim Sarkar here. I am studying BSc in Computer Science and Engineering at Green University of Bangladesh. I have completed Diploma in Computer Technology from Cumilla Polytechnic Institute. Curently, I live at Mirpur Dhaka.
+
+            </p>
+            <a class="link-button" href="https://github.com/samimsarkar" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 </html>
