--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width"> 
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Samim Sarkar's</span> World!</h1>
@@ -25,7 +25,7 @@
             <img src="images/samim's-picture.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/samim's-picture-02.png" alt="">
         </div>
@@ -38,5 +38,23 @@
             <a class="link-button" href="https://github.com/samimsarkar" target="_blank">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experiences-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div class="experience-item" id="full-stack-web-developer">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2023-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution. </p>
+            </div>
+            <div class="experience-item" id="junior-web-developer">
+                <h2>Junior Web Developer</h2>
+                <h3 class="orange-color">2020-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <h5>© Samim Sarkar 2023, @all right reserved by <a href="https://github.com/samimsarkar" target="_blank">Md. Samim Sarkar</a></h5>
+    </footer>
 </body>
 </html>
